--- a/all_graphs.Rmd
+++ b/all_graphs.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Clean Data"
+title: "Code for Graphs"
 author: "George Dalianis"
-date: "4/24/20"
+date: "5/5/20"
 output: html_document
 ---
 
